--- a/test/containerized_krm/generator.yaml
+++ b/test/containerized_krm/generator.yaml
@@ -1,4 +1,4 @@
-apiVersion: transformers.example.co/v1
+apiVersion: transformers.example.com/v1
 kind: IstioOperator
 metadata:
   name: generateManifests
